src/test/deca/context/invalid/created/object/equals_A_boolean.deca
// Description :
//    test equals entre un A et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11:  (3.71) Le membre gauche n'est pas de type 'class'
class A{}
{
A a;
boolean b;
int c = a.equals(b);
}
